# capstone-sandmaze

./: .gitignore  .gitmodules  README.md
hardware/BOM/: BOM_IMU.xlsx  BOM_Rpi_HAT.xlsx  BOM_Wire.xlsx
hardware/PCB/3D Step/: 3D_PCB6_power_wire_2025-02-01.step
hardware/PCB/PowerManagement Board for Rpi/Board1/Rpi Head/: 1_PD 20V 5A.schdoc
hardware/PCB/PowerManagement Board for Rpi/Board2/: PCB5.pcbdoc
hardware/PCB/PowerManagement Board for Rpi/Board2/IMU Connector/: 1_IMU Connector.schdoc
hardware/PCB/PowerManagement Board for Rpi/Board3/: PCB6.pcbdoc
hardware/PCB/PowerManagement Board for Rpi/Board3/type-c fake wire/: 1_fakewire.schdoc
src/: notes.txt
src/global_coordinate_transformation/: package.xml  read.text  setup.cfg  setup.py
src/global_coordinate_transformation/global_coordinate_transformation/: global_coordinate_transformation.py
src/global_coordinate_transformation/global_coordinate_transformation/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/sipeed_tof_ms_a010/: CMakeLists.txt  package.xml
src/sipeed_tof_ms_a010/src/: frame_struct.h  main.cc  serial.cc  serial.hh  tof1.yaml  tof2.yaml
src/tof_imu_localization/: CMakeLists.txt  package.xml
src/tof_imu_localization/config/: ekf_config.yaml
src/tof_imu_localization/launch/: ekf_launch.py
src/tof_odometry/: CMakeLists.txt  package.xml
src/tof_odometry/src/: notes.txt  tof_processor.cpp
src/vertical_lidar_node/: Readme.text  package.xml  setup.cfg  setup.py
src/vertical_lidar_node/vertical_lidar_node/: vertical_lidar_node.py
